
2006-03-25  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Made "version" a required extensoin (necessary for workspaces)
	* Fix FE-editing bug: new-record icon appears for languages without edit rights

2006-03-25  Karsten Dambekalns  <karsten@typo3.org>

	* ADOdb sysext: Update to version 4.80, added a fix for MSSQL bogus errors.
	* EM: Added new way of handling translations.

2006-03-24 Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fix to htmlArea RTE extension (see details in local ChangeLog)

2006-03-24  Kasper Skaarhoj  <kasperYYYY@typo3.com>
	
	* Integration between Import/export and Extension Manager (extension dependencies)

2006-03-22  Kasper Skaarhoj  <kasperYYYY@typo3.com>
	
	* Fixed a bug in t3lib_refindex which prevented correct indexing from live workspace of records in draft workspaces with references inside flexforms  
	* Fixed bug in T3D export where an array key prevented references in flexform fields to be correctly remapped. My mistake from cleaning up t3lib_flexformtools.

2006-03-23 Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fix bugtracker issue 2958: t3lib_htmlmail::getMimeType isn't working with name based virtual hosts

2006-03-22  Kasper Skaarhoj  <kasperYYYY@typo3.com>
	
	* Fixed that the tcemain copy command works properly under workspaces: Remapping of references is correct now. This also affects TemplaVoila which can now copy a FCE container with sub elements properly.
	* Also added check for extension dependencies in Import/Export: It is not possible to import a T3D file unless extension dependencies are OK. This still needs more work and connection to EM.

2006-03-22  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed label of 'author_email' ('pages_language_overlay')
	* Fix bug #2918: TCEFORM.tt_content.CType.removeItems not applied to db_new_content_el.php (thanks to Oliver Hader)
	* Tools>User Admin didn't check if language icon was set for 'Limit to languages'